# Fjord

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md  rust-toolchain.toml
.cargo/: config.toml
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: ci.yml  qemu-smoke.yml  release-artifacts.yml  security.yml
boot/: README.md  aarch64-fjord.json  linker-aarch64.ld  linker.ld  x86_64-fjord.json
crates/anchor/: Cargo.toml
crates/anchor/src/: lib.rs  measure.rs  seal.rs
crates/boot/: Cargo.toml  build.rs
crates/boot/src/: boot-aarch64.s  boot.s  main.rs
crates/brine/: Cargo.toml
crates/brine/src/: aead.rs  keys.rs  lib.rs
crates/cask/: Cargo.toml
crates/cask/src/: blake3.rs  format.rs  lib.rs  merkle.rs  verify.rs
crates/fjord-rt/: Cargo.toml
crates/fjord-rt/src/: lib.rs
crates/harbormaster/: Cargo.toml
crates/harbormaster/src/: factors.rs  lib.rs  session.rs
crates/helm/: Cargo.toml
crates/helm/src/: launch.rs  lib.rs  supervise.rs
crates/hull/: Cargo.toml
crates/hull/src/: apic.rs  arch.rs  boot.rs  context.rs  gic.rs  irq.rs  irq_hook.rs  lib.rs  mmu.rs  paging.rs  paging_aarch64.rs  sched_hook.rs  serial.rs  timer.rs  user.rs
crates/hull/src/arch/: aarch64.rs  x86_64.rs
crates/keel/: Cargo.toml
crates/keel/src/: cap.rs  cdt.rs  cte.rs  ipc.rs  irqhandler.rs  lib.rs  tide.rs  untyped.rs  userspace.rs  vspace.rs
crates/lading/: Cargo.toml
crates/lading/src/: lib.rs
crates/libfjord/: Cargo.toml
crates/libfjord/src/: lib.rs
crates/logbook/: Cargo.toml
crates/logbook/src/: lib.rs
crates/services/cryptd/: Cargo.toml
crates/services/cryptd/src/: lib.rs
crates/services/netd/: Cargo.toml
crates/services/netd/src/: lib.rs
crates/services/storaged/: Cargo.toml
crates/services/storaged/src/: lib.rs
crates/services/timed/: Cargo.toml
crates/services/timed/src/: lib.rs
crates/services/vfs/: Cargo.toml
crates/services/vfs/src/: lib.rs
docs/: ARCHITECTURE.md  GLOSSARY.md  HISTORY.md  ROADMAP.md
scripts/: qemu-aarch64.sh  qemu-x86.sh
xtask/shipwright/: Cargo.toml
xtask/shipwright/src/: main.rs
