# Copyright Nixort & Itan Winter <https://github.com/Nixort/Fjord> 2026.
#
# License: GNU General Public License v3
# You can find the license file in the project root.
#
# Fjord OS — version 0.0.1
# The code was written for Fjord.
# 23 june 2026

[package]
name = "fjord-rt"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Fjord OS component: fjord-rt"

[lints]
workspace = true

[dependencies]
